<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.itesm.m4_srb__eje_calculadora.MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editNumber1"
            tools:text="@string/input_help"
            android:hint="@string/input_help"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editNumber2"
            tools:text="@string/input_help"
            android:hint="@string/input_help"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/suma_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/textSuma"
                android:textStyle="normal|bold"
                android:background="@android:color/holo_orange_dark"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp" />
            <TextView
                android:text="@string/resta_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/textResta"
                android:textStyle="normal|bold"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:background="@android:color/holo_green_light" />
            <TextView
                android:text="@string/multiplica_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/textMultiplicar"
                android:textStyle="normal|bold"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:background="@android:color/holo_blue_light" />
            <TextView
                android:text="@string/dividir_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/textDividir"
                android:textStyle="normal|bold"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:background="@android:color/holo_purple" />
            <TextView
                android:text="@string/limpiar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/textLimpiar"
                android:textStyle="normal|bold"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:background="@android:color/holo_red_light" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text=""
            android:hint="@string/resultado_help"
            android:id="@+id/textResultado"
            tools:text="@string/resultado_help"
            android:layout_marginTop="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/calculator"
            android:id="@+id/imageView"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/informacion"
        android:id="@+id/imageInformation"
        android:layout_marginStart="308dp"
        android:layout_marginTop="308dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/information"
        android:background="@null"
        android:clickable="true" />

</RelativeLayout>
